--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -169,7 +168,7 @@ h1 {
   font-size: 0.95rem;
 }
 
-.Form-header{
+.Form-header {
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -245,7 +244,7 @@ h1 {
   .app-container {
     padding: 2rem 1.5rem;
   }
-  
+
   .report-form {
     max-width: 100%;
   }
@@ -293,11 +292,10 @@ h1 {
   justify-content: center;
 }
 
-
 .footer {
   width: 100%;
-  background-color: #0f172a; /* deep dark blue */
-  color: #e2e8f0; /* light gray */
+  background-color: #0f172a;
+  color: #e2e8f0;
   padding: 30px 20px;
   text-align: center;
   margin-top: 60px;
@@ -316,7 +314,7 @@ h1 {
 .footer-name {
   font-size: 1.8rem;
   font-weight: 700;
-  color: #38bdf8; /* light blue */
+  color: #38bdf8;
 }
 
 .contact-info p {
@@ -337,8 +335,8 @@ h1 {
 .cv-button {
   margin-top: 10px;
   padding: 10px 25px;
-  background-color: #38bdf8; /* light blue */
-  color: #0f172a; /* dark text */
+  background-color: #38bdf8;
+  color: #0f172a;
   border: none;
   border-radius: 8px;
   font-size: 1rem;
@@ -348,7 +346,7 @@ h1 {
 }
 
 .cv-button:hover {
-  background-color: #0ea5e9; /* slightly darker blue */
+  background-color: #0ea5e9;
   color: white;
 }
 
@@ -361,6 +359,7 @@ h1 {
 .footer-phone {
   margin-left: 10px;
 }
+
 .footer-email {
   margin-right: 10px;
 }
