--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -315,8 +315,8 @@ h1 {
 .cv-button {
   margin-top: 10px;
   padding: 10px 25px;
-  background-color: #818cf8;
-  color: #1e1b4b;
+  background-color:rgb(5, 5, 5);
+  color:rgb(237, 236, 245);
   border: none;
   border-radius: 8px;
   font-size: 1rem;
@@ -326,7 +326,7 @@ h1 {
 }
 
 .cv-button:hover {
-  background-color: #a5b4fc;
+  background-color:rgb(94, 238, 118);
   color: #1e1b4b;
 }
 
